Starting the Sonar Warning Cleanup in Test Classes 8/N